VZDEV/src/objects/CCPM_UIComponentSetting__mdt.object
<CustomObject>
    <description>Parameters required to be set for UI components Lightning.</description>
    <fields>
        <fullName>CCPM_orderByField__c</fullName>
        <description>Orders by a specific Field.</description>
        <inlineHelpText>Orders by a specific Field.</inlineHelpText>
        <label>Order By Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_order__c</fullName>
        <description>Metadata property to set the order by which the Query should sort Data</description>
        <inlineHelpText>Metadata property to set the order by which the Query should sort Data</inlineHelpText>
        <label>Order</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_recordLimit__c</fullName>
        <label>Record Limit</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>UI Component Setting</label>
    <pluralLabel>UI Component Settings</pluralLabel>
</CustomObject>